--- a/package.json
+++ b/package.json
@@ -61,10 +61,8 @@
     "passport-linkedin": "^0.1.3",
     "passport-local": "^0.1.6",
     "passport-twitter": "^1.0.2",
-    "swig": "^1.3.2"
-  },
-  "devDependencies": {
-    "grunt-bower-install": "^1.4.0",
+    "swig": "^1.3.2",
+    "view-helpers": "^0.1.4",
     "grunt-concurrent": "latest",
     "grunt-contrib-csslint": "^0.2.0",
     "grunt-contrib-cssmin": "^0.9.0",
@@ -76,7 +74,7 @@
     "load-grunt-tasks": "^0.4.0"
   },
   "devDependencies": {
-    "assetmanager": "^0.1.1",
+    "grunt-bower-install": "^1.4.0",
     "grunt-karma": "^0.6.2",
     "grunt-mocha-test": "latest",
     "karma": "^0.10.4",
